1 more achievement Fix for z-index of modal overlay + scrollbar padding

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -22,7 +22,10 @@
 
 body.scroll-locked {
     overflow: hidden;
-    padding-right: var(--scrollbar-width);
+
+    .achievements-container {
+        padding-right: var(--scrollbar-width);
+    }
 }
 
 .achievements-container {
