--- a/src/css/modal.scss
+++ b/src/css/modal.scss
@@ -24,6 +24,7 @@
         bottom: 0;
         right: 0;
         background-color: rgba(0, 0, 0, 0.5);
+        z-index: 20;
     }
 
     .perspective-card {
